--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-watch": "vite build --watch"
   },
   "type": "module",
   "prettier": {
